src/objects/Incident__c.object
<CustomObject>
    <fields>
        <fullName>In_RMIS__c</fullName>
        <label>In RMIS?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incident_Description__c</fullName>
        <description>Description of Incident</description>
        <inlineHelpText>Provide as detailed as possible description of what happened</inlineHelpText>
        <label>Incident Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incident_ID__c</fullName>
        <label>Incident ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incident_Type__c</fullName>
        <description>Primary Description of Incident type</description>
        <inlineHelpText>Select one or more primary type of Incident</inlineHelpText>
        <label>Incident Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External fraud</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employment Practices &amp; Workplace Safety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clients, Products, &amp; Business Practices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Damage to Physical Assets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Disruption &amp; Systems Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execution, Delivery &amp; process management</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Link_to_RMIS_Incident__c</fullName>
        <label>Link to RMIS Incident</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Recovery_Cost__c</fullName>
        <label>Recovery Cost</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recovery_Date__c</fullName>
        <label>Recovery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_Date__c</fullName>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Report_to_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Report to Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date_of_Incident__c</fullName>
        <description>Date on which the Incident is believed to have started</description>
        <inlineHelpText>Enter the date on which the incident was believed to have started.</inlineHelpText>
        <label>Start Date of Incident</label>
        <type>Date</type>
    </fields>
    <label>Incident</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Incident&apos;s Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Link_Required_if_Incident_in_RMIS</fullName>
        <active>true</active>
        <description>If the Incident is in RMIS than a link to that Incident Record is required.</description>
        <errorConditionFormula>ISPICKVAL(In_RMIS__c ,&quot;Yes&quot;)</errorConditionFormula>
        <errorDisplayField>Link_to_RMIS_Incident__c</errorDisplayField>
        <errorMessage>If the Incident is in RMIS than a link to that Incident Record is required.</errorMessage>
    </validationRules>
</CustomObject>